# asar-rs

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README.md
data/: test.asar  test.asar.json
data/contents/: file 2.txt  symlink 1  symlink 2
data/contents/folder 1/folder 2/: file 4.txt  file 5.txt
data/contents/folder 1/folder 3/: file 6.txt
src/: app.rs  error.rs  header.rs  integrity.rs  lib.rs  main.rs  reader.rs  writer.rs
src/app/: args.rs  extract.rs  extract_file.rs  list.rs  pack.rs
