[package]
name = "asar"
description = "A crate to read and write asar archives, often used by Electron apps."
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "Apache-2.0 OR MIT"

[dependencies]
byteorder = "1"
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6"
hex = "0.4"
is_executable = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["hex"] }
sha2 = { version = "0.10", optional = true }
thiserror = "1"
walkdir = "2"
wax = "0.5"

[dev-dependencies]
include_dir = "0.7"

[features]
default = ["write"]
integrity = ["sha2"]
write = ["integrity"]
check-integrity-on-read = ["integrity"]
