[package]
name = "asar"
description = "A crate to read and write asar archives, often used by Electron apps."
version = "0.3.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Absolucy/asar-rs"
homepage = "https://github.com/Absolucy/asar-rs"

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
hex = "0.4"
is_executable = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
sha2 = { version = "0.10", optional = true }
thiserror = "1"
walkdir = "2"
wax = "0.6"

[dev-dependencies]
include_dir = "0.7"

[features]
default = ["write"]
integrity = ["sha2"]
write = ["integrity"]
check-integrity-on-read = ["integrity"]
